--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.1.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2"
